tests/fixtures/errors/bare_required_arg_fn.z
# E0300: a bare reference to a function with required parameters is a
# call missing its arguments; '.take' is the reference spelling.
needs: function {a: u64 b: u64} out u64 is {
    return a + b
}

main: function is {
    f: needs
    print "\{f}"
}
